# stunting-child-classification

./: .gitignore  README.md  agent.py  api.py  main.py  pyproject.toml  requirements.txt  test_api.py
models/: le_gender.pkl  scaler.pkl
notebooks/: nb-1.ipynb
