[project]
name = "stunting-child-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=1.7.0",
    "arxiv>=2.2.0",
    "baidusearch>=1.0.3",
    "duckduckgo-search>=8.0.4",
    "fastapi[standard]>=0.115.14",
    "google-genai>=1.22.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "plotly>=6.2.0",
    "pycountry>=24.6.1",
    "pypdf>=5.6.1",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "streamlit>=1.46.1",
]
